# python-cli-typer-simple

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_name }}/: __main__.py  cli.py
